# cnn-csf

./: CLAUDE.md  README.md  data.list  dataset.py  eval.py  eval.sh  eval_finetune.sh  exp.list  inference.py  loss.py  model.py  plot_finetune_results.py  preprocess_data.py  pyproject.toml  requirements.txt  setup.py  test.list  train.list  train.py  train.sh  train_finetune.sh  val.list
cnn_csf/: __init__.py  finetune.py  inference.py
cnn_csf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cnn_csf/data/: __init__.py  dataset.py
cnn_csf/loss/: __init__.py  losses.py
cnn_csf/model/: __init__.py  unet.py
cnn_csf/utils/: __init__.py  config.py  inference.py  training.py
data/01000002/: csf.txt  epi.txt  t1.txt
examples/: finetune_demo.py  inference_demo.py
raw_data/01000002/: 01000002_V01csf.txt  01000002_V01epi.txt  01000002_V01t1.txt
test_data/01000165/: csf.txt  epi.txt  t1.txt
utils/: config.py  experiment.py  inference.py  logger.py  training.py
